[package]
name = "setia-engage-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
actix-web = "4.4.0"
reqwest = "0.11.22"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
actix-cors = "0.6.4"
env_logger = "0.10.0"
log = "0.4.20"
